# gh-furik

./: AGENTS.md  Cargo.toml  LICENSE  README.md  dprint.json  gh-furik
.github/workflows/: ci.yml  release.yml
src/: formatter.rs  main.rs
src/github/: auth.rs  client.rs  mod.rs
src/github/graphql/: closed_issues.rs  closed_pull_requests.rs  fetch.rs  issue_comments.rs  mod.rs  opened_issues.rs  opened_pull_requests.rs  pull_request_reviews.rs  queries.rs  types.rs  viewer.rs
src/github/graphql/queries/: issue_comments.graphql  opened_issues.graphql  opened_issues_since.graphql  opened_pull_requests.graphql  review_contributions.graphql  search.graphql  search_count.graphql
