[package]
name = "gh-furik"
version = "0.2.1"
edition = "2024"
description = "GitHub activity digger (gh extension)"
license = "MIT"
repository = "https://github.com/hfm/gh-furik"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4", features = ["derive", "env"] }
octocrab = { version = "0.48.1", default-features = false, features = [
    "rustls-aws-lc-rs",
    "rustls",
    "rustls-webpki-tokio",
    "default-client",
    "retry",
    "timeout",
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
valq = "0.3.1"
futures = "0.3"

[dev-dependencies]
temp-env = "0.3"
